--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/gokarna"]
 	path = themes/gokarna
 	url = https://github.com/gokarna-theme/gokarna-hugo.git
+[submodule "themes/hugo-video"]
+	path = themes/hugo-video
+	url = https://github.com/martignoni/hugo-video.git
