--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "jax>=0.5.0",
     "manim>=0.19.0",
     "matplotlib>=3.10.0",
     "shutils>=0.1.0",
