small change to header

--- a/hugo.toml
+++ b/hugo.toml
@@ -19,6 +19,7 @@ title = "Jack Montgomery"
     avatarUrl = "/images/profile.webp"
     avatarAltText = "avatar"
     avatarSize = "size-m"
+    showPostsOnHomePage = "recent"
 
     newPage = true
 
