--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "jax>=0.5.0",
     "manim>=0.19.0",
     "matplotlib>=3.10.0",
+    "numpy>=2.2.2",
     "shutils>=0.1.0",
     "torch>=2.5.1",
 ]
