--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ title = "Jack Montgomery"
       [markup.goldmark.extensions.passthrough]
         enable = true
         [markup.goldmark.extensions.passthrough.delimiters]
-          block = [['$$', '$$']]
+          block = [['$$', '$$'], ['\[', '\]']]
           inline = [['\(', '\)']]
 
 [params]
